--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">SERVICE</a></li>
-                    <li><a href="#">COURSES</a></li>
+                    <li><a href="table.html">RESOURCES</a></li>
+                    <li><a href="video1.html">COURSES</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
