--- a/video1.html
+++ b/video1.html
@@ -84,7 +84,7 @@
             Your browser does not support the audio element.
         </audio>
         <video controls width="400px">
-            <source src="basics.mp4" type="video/mp4">
+            <source src="basic.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
