--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="table.html">RESOURCES</a></li>
                     <li><a href="video1.html">COURSES</a></li>
                     <li><a href="#">CONTACT</a></li>
